--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
             font-weight: bold;
             transition: background-color 0.3s ease, background 0.3s ease;
             overflow: hidden; /* Prevent scrollbar due to falling images */
+            position: relative; /* Required for the pseudo-element */
         }
 
-        body.hovered {
-            background: rgba(0, 0, 0, 0.7);
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0);
+            transition: background 0.3s ease;
+            z-index: 1; /* Ensure it covers the background but not the content */
+        }
+
+        body.hovered::before {
+            background: rgba(0, 0, 0, 0.5); /* Darken the background */
         }
 
         img {
@@ -32,6 +45,7 @@
             display: block;
             margin-bottom: 30px;
             transition: transform 0.3s ease;
+            z-index: 2; /* Ensure it stays above the darkening layer */
         }
 
         img:hover {
@@ -43,6 +57,7 @@
             gap: 15px;
             flex-wrap: wrap;
             justify-content: center;
+            z-index: 2; /* Ensure it stays above the darkening layer */
         }
 
         .button {
@@ -97,7 +112,7 @@
         <a target="_blank" href="https://t.me/+0R-0nPtcoY1kOTgx" class="button">Chart</a>
         <a target="_blank" href="" class="button">Buy</a>
     </div>
-    Welcome to Home of Meme
+    Welcome to Home of M
 
     <script>
         const img = document.getElementById('center-image');
